k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: public-routing
spec:
    rules:
        - host: #INSERT LOAD BALANCER DNS HERE
          http:
            paths:
                - path: /
                  pathType: Prefix
                  backend:
                    service:
                      name: frontend-service
                      port:
                        number: 8501
                - path: /api
                  pathType: Prefix
                  backend:
                    service:
                      name: backend-service
                      port:
                        number: 5000
